--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
  <head> 
   <meta charset="utf-8" /> 
   <title>Find someone who was born in the same day as you</title> 
-<link rel="stylesheet" href="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/css/bootstrap.min.css">
+<link rel="stylesheet" href="./css/bootstrap.min.css">
 <script src="./js/jquery.min.js"></script>
 <script src="./js/bootstrap.min.js"></script>
 
