--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 <script src="./js/nebPay.js"></script>
 <link rel="stylesheet" href="./css/bootstrap-datepicker.css" type="text/css" />
  </head> 
- <body> 
+ <body style="background:url('./img/bg.jpg');background-size: cover;background-position: center center;">
   <div class="container"> 
    <div class="row clearfix"> 
     <div class="col-md-12 column"> 
      <blockquote> 
-      <p> Do you believe in fate? </p> 
-      <small>Let's find someone in the world who was <cite>born in the same day</cite> as you </small> 
+      <p> <h1>Do you believe in fate?</h1> </p> 
+    <h4>Let's find someone in the world who was <cite>born in the same day</cite> as you </h4>
      </blockquote> 
      <div class="panel panel-default"> 
       <div class="panel-heading"> 
